--- a/Soal_PAI_11.html
+++ b/Soal_PAI_11.html
@@ -67,7 +67,7 @@ TAHUN AKADEMIK 2017/2018<br>
   </tr>
 <tr>
     <td><b>Kelas</b></td>
-    <td><b>: XI</b></td>
+    <td><b>: XI SMA</b></td>
   </tr>
 <tr>
     <td><b>Hari/Tanggal</b></td>
@@ -94,7 +94,7 @@ SOAL PILIHAN GANDA</h2>
 </U></P>
 <form id="form1" name="form1" method="post" action="">
  <ol start="1" type="1">
-<li>Carapenggunaanhartayangdibenarkanadalah....</li>
+<li>Cara penggunaan harta yang dibenarkan adalah....</li>
 <br>
     
    
@@ -129,8 +129,8 @@ SOAL PILIHAN GANDA</h2>
 <li>Ajaran yang menyempurnakan kitabZabur.</li>
 <li>Ajaran agar hidupsederhana.</li>
 </ol>
-<p align="left">
-Isi kandungan Injil ditunjukkan oleh nomor . . . .</p>
+<div>
+Isi kandungan Injil ditunjukkan oleh nomor . . . .</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO3" value="a">1, 2,dan 3</li>
@@ -234,8 +234,8 @@ Isi kandungan Injil ditunjukkan oleh nomor . . . .</p>
 <li>Jenazah diletakkan di atas kain kafan dengan posisi tangan diangkat seperti sedang takbir ikhrom.</li>
 <li>Seluruh tubuh jenazah dibalut dengan kain kafan, kecuali muka dibiarkan terbuka.</li>
 </ol>
-<p align="left">
-Dari pernyataan tersebut yang termasuk ketentuan Syara dalam mengkafani jenazah ialah....</p>
+<div>
+Dari pernyataan tersebut yang termasuk ketentuan Syara dalam mengkafani jenazah ialah....</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO11" value="a">(1), (2), (4)</li>
@@ -343,7 +343,7 @@ Dari pernyataan tersebut yang termasuk ketentuan Syara dalam mengkafani jenazah 
    </ol>
 <br>
 <li>QS. Saad ayat 27 menjelaskan bahwa :</li>
-<P>Celakalah orang kafir dan mereka akan masuk neraka disebabkan .....</P>
+<div>Celakalah orang kafir dan mereka akan masuk neraka disebabkan .....</div>
  <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO20" value="a">Tidak mempercayai adanya Tuhan</li>
@@ -355,6 +355,8 @@ Dari pernyataan tersebut yang termasuk ketentuan Syara dalam mengkafani jenazah 
    </ol>
 </ol>
 </form>
+<br>
+<input type="submit" name="submit" placeholder="kirim">
 <br>
  <marquee behavior="alternate" scrollamount="5"> <font name="Forte"><u><h2>
 SELAMAT MENGERJAKAN</h2>
