--- a/Soal_PAI_4SD.html
+++ b/Soal_PAI_4SD.html
@@ -266,6 +266,8 @@ SOAL PILIHAN GANDA</h2>
 </ol>
 </form>
 <br>
+<input type="submit" name="submit" placeholder="kirim">
+<br>
  <marquee behavior="alternate" scrollamount="5"> <font name="Forte"><u><h2>
 SELAMAT MENGERJAKAN</h2>
 </u></font> <marquee>  
