--- a/Soal_pai_10.html
+++ b/Soal_pai_10.html
@@ -67,7 +67,7 @@ TAHUN AKADEMIK 2017/2018<br>
   </tr>
 <tr>
     <td><b>Kelas</b></td>
-    <td><b>: X</b></td>
+    <td><b>: X SMA</b></td>
   </tr>
 <tr>
     <td><b>Hari/Tanggal</b></td>
@@ -129,8 +129,8 @@ SOAL PILIHAN GANDA</h2>
 <li>Mampu memberikan dorongan kepada masyarakat agar hidup rukun dan bersatu</li>
 <li>Dapat memuaskan semua keinginan anggota masyarakat</li>
 </ol>
-<p align="left">
-Dari pernyataan-pernyataan tersebut yang termasuk peranan musyawarah ialah .....</p>
+<div>
+Dari pernyataan-pernyataan tersebut yang termasuk peranan musyawarah ialah .....</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO3" value="a">(1), (2) dan (3)</li>
@@ -234,8 +234,8 @@ Dari pernyataan-pernyataan tersebut yang termasuk peranan musyawarah ialah .....
 <li>Orang-orang riya akan memperoleh kerugian didunia dan akhirat</li>
 <li>Muslim / muslimah dilarang bergaul dengan orang-orang yang bermental riya</li>
 </ol>
-<p align="left">
-Dari pernyataan-pernyataan tersebut yang termasuk ketentuan syara’ tentang riya adalah .....</p>
+<div>
+Dari pernyataan-pernyataan tersebut yang termasuk ketentuan syara' tentang riya adalah .....</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO11" value="a">1, 2 dan 3</li>
@@ -355,6 +355,8 @@ Dari pernyataan-pernyataan tersebut yang termasuk ketentuan syara’ tentang riy
    </ol>
 </ol>
 </form>
+<br>
+<input type="submit" name="submit" placeholder="kirim">
 <br>
  <marquee behavior="alternate" scrollamount="5"> <font name="Forte"><u><h2>
 SELAMAT MENGERJAKAN</h2>
