--- a/Soal_tryout_smp.html
+++ b/Soal_tryout_smp.html
@@ -66,7 +66,7 @@ TAHUN AKADEMIK 2017/2018<br>
   </tr>
 <tr>
     <td><b>Kelas</b></td>
-    <td><b>: XII SMP</b></td>
+    <td><b>: IX SMP</b></td>
   </tr>
 <tr>
     <td><b>Hari/Tanggal</b></td>
@@ -150,7 +150,7 @@ Perbuatan tersebut merupakan pengamalan dari keyakinannnya bahwa Allah SWT. memi
 </i>
    </ol>
 <br>
-<li>17. Di dalam berdiskusi, beda pendapat dengan teman adalah hal yang biasa. Namun Badu, salah seorang siswa kelas IX tidak mau orang lain beda pendapat dengan dia. Orang lain ia paksa untuk mengikuti dan membenarkan pendapatnya.  Badu  tersebut  berarti memiliki sifat tercela yaitu ananiah. Dampak negativ sifat tersebut diantaranya.....</li>
+<li>Di dalam berdiskusi, beda pendapat dengan teman adalah hal yang biasa. Namun Badu, salah seorang siswa kelas IX tidak mau orang lain beda pendapat dengan dia. Orang lain ia paksa untuk mengikuti dan membenarkan pendapatnya.  Badu  tersebut  berarti memiliki sifat tercela yaitu ananiah. Dampak negativ sifat tersebut diantaranya.....</li>
 <br>
  <ol start="1" type="a">
      <i>
@@ -161,7 +161,7 @@ Perbuatan tersebut merupakan pengamalan dari keyakinannnya bahwa Allah SWT. memi
 </i>
    </ol>
 <br>
-<li>18. Ciri-ciri orang munafik sesuai hadits nabi adalah berbohong, ingkar janji dan khianat. Ketiga ciri tersebut mempunyai dampak negatif dalam kehidupan sehari-hari, yaitu...</li>
+<li>Ciri-ciri orang munafik sesuai hadits nabi adalah berbohong, ingkar janji dan khianat. Ketiga ciri tersebut mempunyai dampak negatif dalam kehidupan sehari-hari, yaitu...</li>
 <br>
  <ol start="1" type="a">
      <i>
@@ -308,6 +308,8 @@ Perbuatan tersebut merupakan pengamalan dari keyakinannnya bahwa Allah SWT. memi
    </ol>
 </ol>
 </form>
+<br>
+<input type="submit" name="submit" placeholder="kirim">
 <br>
  <marquee behavior="alternate" scrollamount="5"> <font name="Forte"><u><h2>
 SELAMAT MENGERJAKAN</h2>
