--- a/soal_pai_12.html
+++ b/soal_pai_12.html
@@ -65,7 +65,7 @@ TAHUN AKADEMIK 2017/2018<br>
   </tr>
 <tr>
     <td><b>Kelas</b></td>
-    <td><b>: XII</b></td>
+    <td><b>: XII SMA</b></td>
   </tr>
 <tr>
     <td><b>Hari/Tanggal</b></td>
@@ -163,8 +163,8 @@ SOAL PILIHAN GANDA</h2>
 <li>Adawiyah memohon kepada Allah swt tambahan yang pantas dan berusaha.</li>
 <li>Fatimah bertawakal kepada Allah dengan cara menutup diri dan menjauhkan diri dari keramaian.</li>
 </ol>
-<p align="left">
-Dari penyataan di atas yang merupakan perilaku  ridla dilakukan oleh.... </p>
+<div>
+Dari penyataan di atas yang merupakan perilaku  ridla dilakukan oleh....</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO6" value="a">Mansyur, Mahmud, Fatimah</li>
@@ -210,8 +210,8 @@ Dari penyataan di atas yang merupakan perilaku  ridla dilakukan oleh.... </p>
 <li>penghulu</li>
 <li>dua orang saksi</li>
 </ol>
-<p align="left">
-Yang termasuk rukun nikah terdapat pada nomor. . .</p>
+<div>
+Yang termasuk rukun nikah terdapat pada nomor. . .</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO9" value="a">1, 2, 3, 4 dan 5</li>
@@ -257,8 +257,8 @@ Seseorang bekerja di sebuah instansi, karena dorongan kebutuhan keluarga dia mel
 <li>Selalu berserah diri kepada Allah SWT</li>
 <li>Berjanji tidak mengulangi perbuatannya</li>
 </ol>
-<p align="left">
-Pernyataan yang termasuk taubat adalah nomor.....</p>
+<div>
+Pernyataan yang termasuk taubat adalah nomor.....</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO12" value="a">1 dan 2 </li>
@@ -290,8 +290,8 @@ Pernyataan yang termasuk taubat adalah nomor.....</p>
 <li>Menghargai karya orang lain itu lebih baik dari pada memperolok</li>
 <li>Memberikan penghargaan atas jerih payah yang dikerjakan teman dekat.</li>
 </ol>
-<p align="left">
-Pernyataan di atas yang termasuk perilaku menghargai karya orang lain adalah....</p>
+<div>
+Pernyataan di atas yang termasuk perilaku menghargai karya orang lain adalah....</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO14" value="a">1, 2 dan 3 </li>
@@ -316,8 +316,8 @@ Pernyataan di atas yang termasuk perilaku menghargai karya orang lain adalah....
 <br>
 <li>Dahsyatnya kerusakan akibat bencana seharusnya mengingatkan kita akan kelemahan makhluk, dan kuasa Allah sang Khalik. Allah seringkali menegur umat manusia yang lalai dengan sekian banyak bencana seperti banjir, kebakaran, dan tanah longsor yang banyak memakan harta dan merenggut nyawa manusia. Itulah salah satu tanda kuasa Allah akan adanya hari akhir.....</li>
 <br>
-<p align="left">
-Berikut ini bukan termasuk hikmah dari beriman kepada hari akhir yaitu ....</p>
+<div>
+Berikut ini bukan termasuk hikmah dari beriman kepada hari akhir yaitu ....</div>
 <ol start="1" type="a">
      <i>
 <li><input type="radio" name="NO16" value="a">Semakin kuat keyakinan terhadap hari akhir dengan senantiasa berhati-hati dalam berbuat</li>
@@ -341,8 +341,8 @@ Berikut ini bukan termasuk hikmah dari beriman kepada hari akhir yaitu ....</p>
 <br>
 <li>Pak Sholeh memiliki beberapa petak sawah. Ia tidak mampu mengolah sawahnya sendiri. Oleh karena itu ia menyerahkan penggarapan sawahnya kepada Pak Jajang. Selain menggarap, Pak Jajang juga yang menyediakan benihnya..</li>
 <br>
-<p align="left">
-Kerja sama seperti ini dalam fiqh muamalah  disebut....</p>
+<div>
+Kerja sama seperti ini dalam fiqh muamalah  disebut....</div>
   <ol start="1" type="a">
       <i>
 <li><input type="radio" name="NO18" value="a">mukhabarah</li>
@@ -355,8 +355,8 @@ Kerja sama seperti ini dalam fiqh muamalah  disebut....</p>
 <br>
 <li>Ada kebiasaan dalam sebuah masyarakat, misalnya dalam sewa rumah apabila rumah sewan itu rusak maka menjadi tanggungjawab penyewa sehingga pemilik rumah atau yang menyewakan boleh menuntut  jika terjadi kerusakan asalkan pada saat transaksi saling mengetahui dan sepakat. </li>
 <br>
-<p align="left">
-Dari deskripsi tersebut terdapat asas-asas transaksi ekonomi dalam Islam yaitu ....</p>
+<div>
+Dari deskripsi tersebut terdapat asas-asas transaksi ekonomi dalam Islam yaitu ....</div>
   <ol start="1" type="a">
       <i>
 <li><input type="radio" name="NO19" value="a">transaksi dilandasi degan keikhlasan dan niat karena Allah SWT</li>
@@ -379,6 +379,8 @@ Dari deskripsi tersebut terdapat asas-asas transaksi ekonomi dalam Islam yaitu .
   </ol>
 </ol>
 </form>
+<br>
+<input type="submit" name="submit" placeholder="kirim">
 <br>
  <marquee behavior="alternate" scrollamount="5"> <font name="Forte"><u><h2>
 SELAMAT MENGERJAKAN</h2>
