--- a/Soal_PAI_5SD.html
+++ b/Soal_PAI_5SD.html
@@ -308,6 +308,8 @@ Lanjutan ayat tersebut adalah ....</li>
 </ol>
 </form>
 <br>
+<input type="submit" name="submit" placeholder="kirim">
+<br>
  <marquee behavior="alternate" scrollamount="5"> <font name="Forte"><u><h2>
 SELAMAT MENGERJAKAN</h2>
 </u></font> <marquee>  
