--- a/TRYOUT.html
+++ b/TRYOUT.html
@@ -60,25 +60,34 @@
 		<th><a href="Soal_USBN_PAI_smp.html" target="_blank">Soal USBN PAI SMP</a></th>
 	</tr>
 <tr>
-		<th rowspan="2">Bahasa Inggris</th>
+		<th rowspan="3">Bahasa Inggris</th>
 		<th><a href="soal b inggris SMP.html" target="_blank">Soal Latihan UAS B.Inggris SMP</a></th>
 	</tr>
 <tr>
 		<th><a href="soal b inggris SMA.html" target="_blank">Soal Latihan UAS B.Inggris SMA</a></th>
 	</tr>
 <tr>
-		<th rowspan="2">Bahasa Indonesia</th>
+		<th><a href="soal b inggris SD.html" target="_blank">Soal UAS B.Inggris SD</a></th>
+	</tr>
+<tr>
+		<th rowspan="3">Bahasa Indonesia</th>
 		<th><a href="soal b indonesia SMP.html" target="_blank">Soal UAS B.Indonesia SMP</a></th>
 	</tr>
 <tr>
 		<th><a href="soal b indonesia SMA.html" target="_blank">Soal UAS B.Indonesia SMA</a></th>
 	</tr>
 <tr>
-		<th rowspan="2">Penjaskes</th>
+		<th><a href="soal b indonesia SD.html" target="_blank">Soal UAS B.Indonesia SD</a></th>
+	</tr>
+<tr>
+		<th rowspan="3">Penjaskes</th>
 		<th><a href="soal penjaskes SMP.html" target="_blank"> Soal Penjaskes SMP</a></th>
 	</tr>
 <tr>
 		<th><a href="soal penjaskes SMA.html" target="_blank"> Soal Penjaskes SMA</a></th>
+	</tr>
+<tr>
+		<th><a href="soal penjaskes SD.html" target="_blank">Soal Penjaskes SD</a></th>
 	</tr>
 </table>
 
