--- a/login.html
+++ b/login.html
@@ -10,15 +10,11 @@
 		<form	action="">									
 			<input class="inputform"	type="email"placeholder="Masukkan	Email">
 			<input class="inputform"	type="password"	placeholder="Masukkan	Password">
-		<select name="hobi" style="width: 100%">
- 			<option value="">--Pilih jenis--</option>
-  			<option value="1">1. Member</option>
-  			<option value="2" selected>2. Master</option>
-		</select>
-			<input class="submitform"	type="submit"	value="Login">
+		
+			<button class="submitform"><a href="member.html" class="submitform" style="color: black;">MEMBER</a></button>
 		    <div class="border-p"></div>
 			<p>OR</p>
-			<button class="submitform" style="background-color: blue;">Login With Facebook</button>
+			<button class="submitform"><a href="master.html" class="submitform" style="color: black;">MASTER</a></button>
 		</form>
 		</div>
 	</body>
