--- a/pencarian.html
+++ b/pencarian.html
@@ -2,10 +2,18 @@
 <html>
 <head>
 	<title>pencarian</title>
-	<link rel="stylesheet" type="text/css" href="on.css">
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+
 </head>
 <body>
 
+<div>
+    <link rel="stylesheet" type="text/css" href="on.css">
+</div>
 
 <h1 id="tg">BE SMART</h1>
 <H2 id="tg">Education For Everyone</H2>
@@ -33,13 +41,7 @@
 </ul>
 
 <div id="tg">
-<H2>Pencarian Materi</H2>
-
-<input type="text" name="Searching">
-<input type="submit" value="SEARCH">
-</div>
-
-
+<input type="search" name="search" style="float: right;" placeholder="Search..." id="myInput" onkeyup="myFunction()">
 <div class="dropdown">
   <button class="dropbtn">MATEMATIKA</button>
   <div class="dropdown-content">
@@ -121,15 +123,186 @@
   </div>
 </div>
 
+</div>
 
-<table>
+<table align="center;" id="myTable" style="text-align: center;" >
   <tr>
-    <th style="width: 70%;">Mata Pelajaran</th>
-    <th style="width: 70%;">Kelas</th>
+    <th style="width: 70%; color: black;size: 100px;">Mata Pelajaran</th>
+    <th style="width: 70%; color: black; size: 100px;">Kelas</th>
   </tr>
   <tr>
-    <td></td>
+    <td><a href="materi IPA/Materi BAHASA INDONESIA SD.htm">Materi BAHASA INDONESIA</a></td>
+    <td>SD</td>
   </tr>
+   <tr>
+    <td><a href="materi IPA/Materi BAHASA INDONESIA SMP.htm">Materi BAHASA INDONESIA</a></td>
+    <td>SMP</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi IPA SD.htm">Materi IPA</a></td>
+    <td>SD</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi IPA SMA.htm">Materi IPA</a></td>
+    <td>SMA</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi IPA SMP.htm">Materi IPA</a></td>
+    <td>SMP</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/IPS SD.htm">Materi IPS</a></td>
+    <td>SD</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi IPS SD.htm">Materi IPS</a></td>
+    <td>SD</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi IPS SMA.htm">Materi IPS</a></td>
+    <td>SMA</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi IPS SMP.htm">Materi IPS</a></td>
+    <td>SMP/td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi MATEMATIKA SD.htm">Materi MATEMATIKA</a></td>
+    <td>SD</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi MATEMATIKA SMA.htm">Materi MATEMATIKA</a></td>
+    <td>SMA</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi MATEMATIKA SMP.htm">Materi MATEMATIKA</a></td>
+    <td>SMP</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi PENJAS SD.htm">Materi PENJAS</a></td>
+    <td>SD</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi PENJAS SMP.htm">Materi PENJAS</a></td>
+    <td>SMP</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi PPKN SD.htm">Materi PPKN</a></td>
+    <td>SD</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi PPKN SMA.htm">Materi PPKN</a></td>
+    <td>SMA</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi PPKN SMP.htm">Materi PPKN</a></td>
+    <td>SMP</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi SENI BUDAYA SD.htm">Materi SENI BUDAYA</a></td>
+    <td>SD</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi SENI BUDAYA SMA.htm">Materi SENI BUDAYA</a></td>
+    <td>SMA</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi SENI BUDAYA SMP.htm">Materi SENI BUDAYA</a></td>
+    <td>SMP</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi TIK SMA.htm">Materi TIK</a></td>
+    <td>SMA</td>
+  </tr>
+   <tr>
+    <td><a href="materi IPA/Materi TIK SMP.htm">Materi TIK</a></td>
+    <td>SMP</td>
+  </tr>
+   <tr>
+    <td><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 7 SMP.htm">Materi AGAMA</a></td>
+    <td>7 SMP</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 8 SMP.htm">Materi AGAMA</a></td>
+    <td>8 SMP</td>
+  </tr>
+     <tr>
+    <td><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 9 SMP.htm">Materi AGAMA</a></td>
+    <td>9 SMP</td>
+  </tr>
+     <tr>
+    <td><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 10 SMA.htm">Materi AGAMA</a></td>
+    <td>10 SMA</td>
+  </tr>
+     <tr>
+    <td><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 11 SMA.htm">Materi AGAMA</a></td>
+    <td>11 SMA</td>
+  </tr>
+     <tr>
+    <td><a href="PAI/Rangkuman Materi Pelajaran PAI Kelas 12 SMA.htm">Materi AGAMA</a></td>
+    <td>12 SMA</td>
+  </tr>
+     <tr>
+    <td><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 4 SD.htm">Materi AGAMA</a></td>
+    <td>4 SD</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 5 SD.htm">Materi AGAMA</a></td>
+    <td>5 SD</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Rangkuman Pelajaran Agama Islam Kelas 6 SD.htm">Materi AGAMA</a></td>
+    <td>6 SD</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Chapter 1 Les's Visit Seattle.htm">Materi Chapter 1 Les's Visit Seattle</a></td>
+    <td>12 SMA</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Chapter 2 What Does it Mean.htm">Materi Chapter 2 What Does it Mean</a></td>
+    <td>12 SMA</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Chapter 3 Have a Look at Life Underwater.htm">Materi Chapter 3 Have a Look at Life Underwater</a></td>
+    <td>12 SMA</td>
+  </tr>
+     <tr>
+    <td><a href="PAI/Chapter 4 I Can't Believe it.htm">Materi Chapter 4 I Can't Believe it</a></td>
+    <td>12 SMA</td>
+  </tr>
+ <tr>
+    <td><a href="PAI/Chapter 5 Do You Know How to Apply For a Job.htm">Materi Chapter 5 Do You Know How to Apply For a Job</a></td>
+    <td>12 SMA</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Chapter 6 What do They Look Like.htm">Materi Chapter 6 What do They Look Like</a></td>
+    <td>12 SMA</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Chapter 7 Read the Nature.htm">Materi Chapter 7 Read the Nature</a></td>
+    <td>12 SMA</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Chapter 8 Students Don't Bully.htm">Materi Chapter 8 Students Don't Bully</a></td>
+    <td>12 SMA</td>
+  </tr>
+     <tr>
+    <td><a href="PAI/Chapter 9 Do You Know How Potteries are Made.htm">Materi Chapter 9 Do You Know How Potteries are Made</a></td>
+    <td>12 SMA</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Chapter 10 What Can We Learn From Baduy People.htm">Materi Chapter 10 What Can We Learn From Baduy People</a></td>
+    <td>12 SMA</td>
+  </tr>
+    <tr>
+    <td><a href="PAI/Materi Bahasa Indonesia Kelas XII SMA.htm">Materi Bahasa Indonesia Kelas XII SMA</a></td>
+    <td>XII SMA</td>
+  </tr>
+  <tr>
+    <td><a href="PAI/Materi Pendidikan Jasmani dan Kesehatan SMA kelas XII.htm">Materi Pendidikan Jasmani dan Kesehatan SMA kelas XII</a></td>
+    <td>XII SMA</td>
+  </tr>
+  
 </table>
 
 <div class="dv">
@@ -138,6 +311,26 @@
 	<a href="lapor.html" id="wr">lapor admin</a>
 	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
+
+<script>
+function myFunction() {
+  var input, filter, table, tr, td, i;
+  input = document.getElementById("myInput");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("myTable");
+  tr = table.getElementsByTagName("tr");
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[0];
+    if (td) {
+      if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    }
+  }
+}
+</script>
 
 </body>
 </html>
