--- a/pencarian.html
+++ b/pencarian.html
@@ -53,8 +53,8 @@
 <div class="dropdown">
   <button class="dropbtn">BAHASA INDONESIA</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
+    <a href="BAHASA INDONESIA_SD.html">SD</a>
+    <a href="BAHASA INDONESIA_SMP.html">SMP</a>
     <a href="sma_indonesia.html">SMA</a>
   </div>
 </div>
@@ -69,8 +69,8 @@
 <div class="dropdown">
   <button class="dropbtn">PENJASKES</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
+    <a href="PENJAS_SD.html">SD</a>
+    <a href="PENJAS_SMP.html">SMP</a>
     <a href="sma_penjas.html">SMA</a>
   </div>
 </div>
@@ -85,41 +85,40 @@
 <div class="dropdown">
   <button class="dropbtn">IPA</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="IPA_SD.html">SD</a>
+    <a href="IPA_SD.html">SMP</a>
+    <a href="IPA_SD.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
   <button class="dropbtn">IPS</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="IPS_SD.html">SD</a>
+    <a href="IPS_SMP.html">SMP</a>
+    <a href="IPS_SMA.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
   <button class="dropbtn">SENI BUDAYA</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="SENIBUDAYA_SD.html">SD</a>
+    <a href="SENIBUDAYA_SMP.html">SMP</a>
+    <a href="SENIBUDAYA_SMA.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
   <button class="dropbtn">TIK</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="TIK_SMP.html">SMP</a>
+    <a href="TIK_SMA.html">SMA</a>
   </div>
 </div>
 <div class="dropdown">
   <button class="dropbtn">PPKN</button>
   <div class="dropdown-content">
-    <a href="#">SD</a>
-    <a href="#">SMP</a>
-    <a href="#">SMA</a>
+    <a href="PPKN_SD.html">SD</a>
+    <a href="PPKN_SMP.html">SMP</a>
+    <a href="PPKN_SMA.html">SMA</a>
   </div>
 </div>
 
@@ -127,8 +126,8 @@
 
 <table align="center;" id="myTable" style="text-align: center;" >
   <tr>
-    <th style="width: 70%; color: black;size: 100px;">Mata Pelajaran</th>
-    <th style="width: 70%; color: black; size: 100px;">Kelas</th>
+    <th style="width: 70%; color: black;size: 100px; background-color: blue;">Mata Pelajaran</th>
+    <th style="width: 70%; color: black; size: 100px; background-color: blue;">Kelas</th>
   </tr>
   <tr>
     <td><a href="materi IPA/Materi BAHASA INDONESIA SD.htm">Materi BAHASA INDONESIA</a></td>
