--- a/IPA_SMA.html
+++ b/IPA_SMA.html
@@ -28,13 +28,13 @@
 	</li>
 
 	<li>
-		<a href="">REGISTRASI</a>
+		<a href="login.html">REGISTRASI</a>
 	</li>
 </ul>
 
 <table>
 <tr>
-		<th>3</th>
+		<th>1</th>
 		<th><a href="materi IPA/Materi IPA SMA.htm" target="_blank">Materi IPA SMA</th>
 		<th><a href="materi IPA/Materi IPA SMA.doc">Materi IPA SMA</a></th>
 	</tr>
