--- a/IPS_SMP.html
+++ b/IPS_SMP.html
@@ -28,13 +28,13 @@
 	</li>
 
 	<li>
-		<a href="">REGISTRASI</a>
+		<a href="login.html">REGISTRASI</a>
 	</li>
 </ul>
 
 <table>
 <tr>
-		<th>3</th>
+		<th>1</th>
 		<th><a href="materi IPA/Materi IPS SMP.htm" target="_blank">Materi IPS SMP</th>
 		<th><a href="materi IPA/Materi IPS SMP.doc">Materi IPS SMP</a></th>
 	</tr>
