--- a/PENJAS_SD.html
+++ b/PENJAS_SD.html
@@ -28,13 +28,13 @@
 	</li>
 
 	<li>
-		<a href="">REGISTRASI</a>
+		<a href="login.html">REGISTRASI</a>
 	</li>
 </ul>
 
 <table>
 <tr>
-		<th>3</th>
+		<th>1</th>
 		<th><a href="materi IPA/Materi PENJAS SD.htm" target="_blank">Materi PENJAS SD</th>
 		<th><a href="materi IPA/Materi PENJAS SD.doc">Materi PENJAS SD</a></th>
 	</tr>
