--- a/home.html
+++ b/home.html
@@ -50,8 +50,15 @@
 	<h2 id="tg">PEMBERITAHUAN</h2>
 	<p id="tg">Be Smart adalah web berbasis pembelajaran, yang bisa di gunakan baik itu anak kecil maupun orang dewasa.</p>
 	<p id="tg">Pada dasarnya web ini di buat khusus bagi semua orang baik itu orang yang normal ataupun yang tidak normal yang ingin mencari ilmu untuk menambah wawasan.</p>
-</div>
-<div id="section">
+	<p><h5 style="color: black; size: 30%:width40%;">MISI</h5>
+
+	Be smart mengerti dengan perkembangan teknologi dan perilaku pelajar jaman sekarang banyak pelajar yang malas untuk membuka atau membaca buku. Pelajar saat ini lebih banyak membaca di Hp atau komputer. Dengan itu kami membuat Be smart agar pelajar dapat mudah untuk belajar dan mengerjakan soal-soal yang Be smart sediakan. Semoga Be smart terus berkembang dan dapat bermanfaat.
+	</p>
+	<p><h5 style="color: black; size: 30%:width40%;">VISI</h5>
+Be smart merupakan wadah yang secara khusus disesuaikan untuk kebutuhan pelajar , yang menyediakan pengalaman belajar online yang mudah dan fleksibel. Be smart Menyediakan Materi dan Soal-Soal agar memudahkan pelajar yang membutuhkan soal-soal untuk latihan mengerjakan soal-soal untuk menghadapi ujian nasional atau ujian sekolah. Dengan Be smart pelajar dapat mengetahui berapa persen mereka dapat mengerjakan soal-soal ujian nanti dengan demikian mereka dapat belajar lebih giat lagi. Be smart juga menyediakan Materi-Materi yg dapat di download.
+	</p>
+
+<div id="">
 <div id="" style="float: left; ">
 	<img src="gmbr/dw.jpg" height="100px" alt="dwisyal">
 </div>
@@ -67,6 +74,8 @@
 <div id="" style="float: left;">
 	<img src="gmbr/ris.jpg" height="100px" alt="haris">
 </div>
+</div>
+
 </div>
 
 </div>
