--- a/master.html
+++ b/master.html
@@ -45,7 +45,7 @@
 			</div>
 			<button><a href="mas_editprof.html">Edit Profil</a></button>
 			<button><a href="member_materi.html">Upload Materi</a></button>
-			<button><a href="">Soal Try Out</a></button>
+			<button><a href="member_materi.html">Masukkan Soal</a></button>
 		</th>
 		</tr>
 </table>
