--- a/member.html
+++ b/member.html
@@ -43,7 +43,7 @@
 				status<br>
 			</div>
 			<button><a href="editprof.html">Edit Profil</a></button>
-			<button><a href="">TRY OUT</a></button>
+			<button><a href="TRYOUT.html">TRY OUT</a></button>
 			<button><a href="nilai.html">Nilai</a></button>
 			<button><a href="list.html">Materi</a></button>
 		</th>
