--- a/BAHASA INDONESIA_SD.html
+++ b/BAHASA INDONESIA_SD.html
@@ -28,13 +28,13 @@
 	</li>
 
 	<li>
-		<a href="">REGISTRASI</a>
+		<a href="login.html">REGISTRASI</a>
 	</li>
 </ul>
 
 <table>
 <tr>
-		<th>3</th>
+		<th>1</th>
 		<th><a href="materi IPA/Materi BAHASA INDONESIA SD.htm" target="_blank">Materi BAHASA INDONESIA SD</a></th>
 		<th><a href="materi IPA/Materi BAHASA INDONESIA SD.doc">Materi BAHASA INDONESIA SD</a></th>
 	</tr>
