--- a/IPS_SMA.html
+++ b/IPS_SMA.html
@@ -28,13 +28,13 @@
 	</li>
 
 	<li>
-		<a href="">REGISTRASI</a>
+		<a href="login.html">REGISTRASI</a>
 	</li>
 </ul>
 
 <table>
 <tr>
-		<th>3</th>
+		<th>1</th>
 		<th><p>Materi IPS SMA</p></th>
 		<th><a href="materi IPA/Materi IPS SMA.doc">Materi IPS SMA</a></th>
 	</tr>
