--- a/MATEMATIKA_SMA.html
+++ b/MATEMATIKA_SMA.html
@@ -28,13 +28,13 @@
 	</li>
 
 	<li>
-		<a href="">REGISTRASI</a>
+		<a href="login.html">REGISTRASI</a>
 	</li>
 </ul>
 
 <table>
 <tr>
-		<th>3</th>
+		<th>MATEMATIKA</th>
 		<th><a href="materi IPA/Materi MATEMATIKA SMA.htm" target="_blank">Materi MATEMATIKA SMA</th>
 		<th><a href="materi IPA/Materi MATEMATIKA SMA.doc">Materi MATEMATIKA SMA</a></th>
 	</tr>
