--- a/SENIBUDAYA_SMA.html
+++ b/SENIBUDAYA_SMA.html
@@ -28,13 +28,13 @@
 	</li>
 
 	<li>
-		<a href="">REGISTRASI</a>
+		<a href="login.html">REGISTRASI</a>
 	</li>
 </ul>
 
 <table>
 <tr>
-		<th>3</th>
+		<th>1</th>
 		<th><a href="materi IPA/Materi SENI BUDAYA SMA.htm" target="_blank">Materi SENI BUDAYA SMA</th>
 		<th><a href="materi IPA/Materi SENI BUDAYA SMA.doc">Materi SENI BUDAYA SMA</a></th>
 	</tr>
