--- a/Tentangkmi.html
+++ b/Tentangkmi.html
@@ -23,11 +23,11 @@
 	</li>
 
 	<li>
-		<a href="">PENCARIAN</a>
+		<a href="pencarian.html">PENCARIAN</a>
 	</li>
 
 	<li>
-		<a href="">REGISTRASI</a>
+		<a href="login.html">REGISTRASI</a>
 	</li>
 </ul>
 
@@ -82,8 +82,8 @@
 <div class="dv">
 	<p>Be Smart for everyone</p>
 	<a href="panduan.html" id="wr">panduan</a>
-	<a href="" id="wr">lapor admin</a>
-	<a href="" id="wr">tentang kami</a>
+	<a href="lapor.html" id="wr">lapor admin</a>
+	<a href="Tentangkmi.html" id="wr">tentang kami</a>
 </div>
 </body>
 </html>
