--- a/member_materi.html
+++ b/member_materi.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -83,7 +83,7 @@
 	</li>
 </ul>
 
-<h4 id="tg">Masukkan materi anda</h4>
+<h4 id="tg">Masukkan soal anda</h4>
 <div align="center">
 <input type="file" name="materi"><br>
 <input type="submit" name="submit" placeholder="KIRIM">
@@ -98,5 +98,5 @@
 
 
 </body>
->>>>>>> bd5bbdcb8a5933181b72cd9ef2cef439118a5cee
+
 </html>
