--- a/contac.html
+++ b/contac.html
@@ -42,47 +42,47 @@
 
 <table align="center" id="myTable">
 	<tr>
-		<th><img src="gmbr/pf.png" height="100px"><br>
-		nama<br>
-		pendidikan<br>
-		kontak<br>
-		sosmed<br>
+		<th><img src="gmbr/dw.jpg" height="100px"><br>
+		Dwisal Ganteng<br>
+		S1 Informatika<br>
+		0813xxxxxxx<br>
+		Ig: dwisal.ganteng<br>
 	</th>
 	</tr>
 
 	<tr>
-		<th><img src="gmbr/pf.png" height="100px"><br>
-			nama<br>
-		pendidikan<br>
-		kontak<br>
-		sosmed<br>
+		<th><img src="gmbr/ap.jpg" height="100px"><br>
+		Apolos Cakep<br>
+		S1 Informatika<br>
+		0813xxxxxxx<br>
+		Ig: apolos_3a<br>
 	</th>
 	</tr>
 
 	<tr>
-		<th><img src="gmbr/pf.png" height="100px"><br>
-			nama<br>
-		pendidikan<br>
-		kontak<br>
-		sosmed<br>
+		<th><img src="gmbr/uswa.jpg" height="100px"><br>
+		Uswatun Syantik<br>
+		S1 Informatika<br>
+		0813xxxxxxx<br>
+		Ig: Uswatun<br>
 	</th>
 	</tr>
 
 	<tr>
-		<th><img src="gmbr/pf.png" height="100px"><br>
-			nama<br>
-		pendidikan<br>
-		kontak<br>
-		sosmed<br>
+		<th><img src="gmbr/da.jpg" height="100px"><br>
+		Danang??<br>
+		S1 Informatika<br>
+		0813xxxxxxx<br>
+		Ig: danang_cr<br>
 	</th>
 	</tr>
 
 	<tr>
-		<th><img src="gmbr/pf.png" height="100px"><br>
-			nama<br>
-		pendidikan<br>
-		kontak<br>
-		sosmed<br>
+		<th><img src="gmbr/ris.jpg" height="100px"><br>
+		Haris Tamvan<br>
+		S1 Informatika<br>
+		0813xxxxxxx<br>
+		Ig: haris<br>
 	</th>
 	</tr>
 </table>
