--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
 	Haris<br>
 </div>
 
-<div id="section" style="width: 450px; ">
+<div id="section" style="width: 90%; ">
 	<h2 id="tg">PEMBERITAHUAN</h2>
 	<p id="tg">Be Smart adalah web berbasis pembelajaran, yang bisa di gunakan baik itu anak kecil maupun orang dewasa.</p>
 	<p id="tg">Pada dasarnya web ini di buat khusus bagi semua orang baik itu orang yang normal ataupun yang tidak normal yang ingin mencari ilmu untuk menambah wawasan.</p>
@@ -58,25 +58,15 @@
 Be smart merupakan wadah yang secara khusus disesuaikan untuk kebutuhan pelajar , yang menyediakan pengalaman belajar online yang mudah dan fleksibel. Be smart Menyediakan Materi dan Soal-Soal agar memudahkan pelajar yang membutuhkan soal-soal untuk latihan mengerjakan soal-soal untuk menghadapi ujian nasional atau ujian sekolah. Dengan Be smart pelajar dapat mengetahui berapa persen mereka dapat mengerjakan soal-soal ujian nanti dengan demikian mereka dapat belajar lebih giat lagi. Be smart juga menyediakan Materi-Materi yg dapat di download.
 	</p>
 
-<div id="">
-<div id="" style="float: left; ">
-	<img src="gmbr/dw.jpg" height="100px" alt="dwisyal">
-</div>
-<div id="" style="float: left; ">
-	<img src="gmbr/ap.jpg" height="100px" alt="apolos">
-</div>
-<div id="">
-	<img src="gmbr/uswa.jpg" height="100px" alt="uswatun">
-</div>
-<div id="" style="float:left ;">
-	<img src="gmbr/da.jpg" height="100px" alt="danang">
-</div>
-<div id="" style="float: left;">
-	<img src="gmbr/ris.jpg" height="100px" alt="haris">
-</div>
-</div>
-
-</div>
+<table border="0">
+	<tr>
+		<th><img src="gmbr/dw.jpg" height="100px" alt="dwisyal"></th>
+		<th><img src="gmbr/ap.jpg" height="100px" alt="apolos"></th>
+		<th><img src="gmbr/uswa.jpg" height="100px" alt="uswatun"></th>
+		<th><img src="gmbr/da.jpg" height="100px" alt="danang"></th>
+		<th><img src="gmbr/ris.jpg" height="100px" alt="haris"></th>
+	</tr>
+</table>
 
 </div>
 
