penambahan akhir terbaru 6

--- a/TRYOUT.html
+++ b/TRYOUT.html
@@ -89,6 +89,46 @@
 <tr>
 		<th><a href="soal penjaskes SD.html" target="_blank">Soal Penjaskes SD</a></th>
 	</tr>
+	<tr>
+		<th rowspan="4">IPA</th>
+		<tr>
+		<th><a href="Soal_IPA_sd.html" target="_blank">soal IPA SD</a></th>
+		</tr>
+		<tr>
+		<th><a href="soal_IPA_smp.html" target="_blank">soal IPA SMP</a></th>
+		</tr>
+<tr>
+	<th><a href="Soal_Biologi.html" target="_blank">soal IPA SMA/Biologi</a></th>
+</tr>
+	<tr>
+		<th rowspan="3">MATEMATIKA</th>
+		<tr>
+		<th><a href="Soal_mtk_smp.html" target="_blank">soal MATEMATIKA SMP</a></th>
+		</tr>
+		<tr>
+		<th><a href="soal_mtk_smk.html" target="_blank">soal MATEMATIKA SMA</a></th>
+		</tr>
+	</tr>
+	<tr>
+		<th rowspan="2">PPKN</th><tr>
+		<th><a href="Soal PPKN SD.html" target="_blank">soal PPKN SD</a></th>
+		</tr>
+	</tr>
+<tr>
+		<th rowspan="4">IPS</th>
+		<tr>
+		<th><a href="soal_ips_sd.html" target="_blank">soal IPS SD</a></th>
+		</tr>
+		<tr>
+		<th><a href="Soal ips_Smp.html" target="_blank">soal IPS SMP</a></th>
+		</tr>
+		<tr>
+		<th><a href="Soal ips_SMA.html" target="_blank">soal IPS SMA</a></th>
+		</tr>
+	</tr>
+	<tr>
+		<th colspan="2">----------Tunggu Update Soal Berikutnya----------</th>
+	</tr>
 </table>
 
 <div class="dv">
